# agent-smith

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  index.html
backend/: README.md  instructions.txt  main.py  pyproject.toml  requirements.txt
backend/api/: chatbot.py  flow_router.py  flows.py  llm_router.py  llms.py  state.py  tools.py
backend/core/: encryption.py  startup.py
backend/core/graph/: models.py  runner.py
backend/core/llms/: base.py
backend/core/llms/providers/: anthropic.py
backend/crud/: flows.py  llm_credentials  llms.py  tools.py
backend/db/: init_db.py  paths.env  session.py  utils.py
backend/models/: flows.py  functions.py  llms.py  tools.py
backend/schemas/: flows.py  llms.py  state.py  state_io.py  tools.py
backend/schemas/sandbox/: chatbot.py
backend/services/flows/: codegen.py  parser.py  state.py
backend/services/llms/: base.py  factory.py
backend/services/llms/local/: llama_cpp.py
backend/services/llms/providers/: anthropic.py  hugging_face.py  openai.py
backend/services/sandbox/chatbot/: llm_service.py
backend/services/tools/: base.py  factory.py
backend/services/tools/api_call/: api_call.py
backend/services/tools/rag/: chroma.py  qdrant.py
backend/services/tools/web_search/: duckduckgo.py
backend/storage/: dev.db
backend/templates/flows/: langgraph_main.jinja2
backend/templates/llms/api/: anthropic.jinja  hugging_face.jinja  openai.jinja
backend/templates/tools/api_call/: api_call.jinja
backend/tests/tools/: test_chroma_rag_generator.py
backend/utils/: naming_utils.py  security.py
(+52 files in other folders)
