[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.4",
    "fastapi>=0.115.13",
    "huggingface-hub>=0.33.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "transformers>=4.53.1",
    "uvicorn>=0.34.3",
]
